welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:20: error: too many arguments for method growFlowers: ()Unit
growFlowers(5)
           ^